--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -7,6 +7,7 @@ name: sample Workflow
 
 # Trigger the workflow when a new issue is opened
 on:
+  workflow_dispatch:
   issues:
     types: [opened]
 
